change language text to

--- a/assistant/testview/templates/index.html
+++ b/assistant/testview/templates/index.html
@@ -14,7 +14,7 @@
     <div class="container mt-3">
         <h3 class="text-center">Web Speech API Demo</h3>
         <div id="info"></div>
-        <div id="div1">Wie kann ich dir helfen?</div>
+        <div id="div1">How can I help you?</div>
         <div class="float-right">
             <button id="start_button">
                 <img id="start_img" src="../static/images/mic.gif" alt="Start"></button>
