--- a/assistant/testview/templates/index.html
+++ b/assistant/testview/templates/index.html
@@ -6,13 +6,14 @@
     <title>Web Speech APIU</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'web-speech.css' %}" />
+    <link rel="stylesheet" href="{% static 'web-speech.css' %}"/>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 <main>
     <div class="container mt-3">
         <h3 class="text-center">Web Speech API Demo</h3>
+        <span style="font-size:30px;cursor:pointer;" onclick="openNav()">&#9776; preferences</span>
         <div id="info"></div>
         <div id="div1">How can I help you?</div>
         <div class="float-right">
@@ -24,10 +25,15 @@
             <span id="interim_span" class="interim"></span>
             <p>
         </div>
-            <div class="col-12 col-md-4 col-lg-6 mt-3 mt-md-0 p-0 m-0">
-                <div class="float-right">
-                    <button id="ajax_button" class="btn btn-primary ">POST</button>
-                </div>
+        <div class="col-12 col-md-4 col-lg-6 mt-3 mt-md-0 p-0 m-0">
+            <div class="float-right">
+                <button id="ajax_button" class="btn btn-primary ">POST</button>
+            </div>
+        </div>
+    </div>
+     <div id="myNav" class="overlay">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <div class="overlay-content">
             </div>
         </div>
 
