--- a/assistant/testview/static/newindex.css
+++ b/assistant/testview/static/newindex.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;900&display=swap');
 
 body {
     background-color: black;
@@ -6,11 +6,53 @@ body {
     font-size: x-large;
 }
 
+a {
+    border-radius: 40px;
+    background: lightblue;
+    padding: 15px; 
+    padding-left: 40px;
+    padding-right: 40px;
+    text-decoration: none;
+    color : #000;
+    font-size: large;
+}
+
+button {
+    background-color: #af1c30; /* Green */
+    border: none;
+    color: white;
+    padding: 40px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 50%;
+    left: 50%;
+    bottom:   5%;
+    position: absolute;
+}
+
+.news {
+    background-color: #0076BA;
+    margin-top: 5%;
+}
+
+.online-meeting {
+    background-color: #B12624;
+}
+
 .assistant { 
     color: white;
+    width:50%;
+    margin-left: 5%;
+    margin-top: 5%;
 }
 
 .user { 
     color: #FF9301;
     text-align: right;
+    margin-right: 5%;
+    margin-top: 5%;
 }
