--- a/assistant/testview/templates/newindex.html
+++ b/assistant/testview/templates/newindex.html
@@ -19,12 +19,12 @@
             <div id="dialog">
                 
                 <div class="assistant">
-                    <p>Hi Dorian,<br>How can I help you?</p>
+                    <p>Hello,<br>How can I help you?</p>
                 </div>
                 
             </div>
             
-            <button id="start">Start</button>
+            <button id="start"></button>
 
 
         </main>
