--- a/assistant/testview/templates/index.html
+++ b/assistant/testview/templates/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'web-speech.css' %}"/>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
-<body>
+<body onload="checkCookie()">
 <main>
     <div class="container mt-3">
         <h3 class="text-center">Web Speech API Demo</h3>
@@ -31,11 +31,17 @@
             </div>
         </div>
     </div>
-     <div id="myNav" class="overlay">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <div class="overlay-content">
-            </div>
+    <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+            <form>
+                <input type="text" value="Enter Your Nickname" id="nameBox" name='usrname'>
+                <input type="button" value="Go!" id="submit"
+                       onclick="putCookie(document.getElementsByTagName('form'));">
+            </form>
+            <div id="value"></div>
         </div>
+    </div>
 
 </main>
 <script src="{% static 'js/web-speech-api.js' %}"></script>
