added proactive dialog with static reminders

--- a/assistant/testview/templates/newindex.html
+++ b/assistant/testview/templates/newindex.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="{% static 'newindex.css' %}" />
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="{% static 'js/speech.js' %}"></script>
+        <script src="{% static 'js/proactive.js' %}"></script>
     </head>
 
     <body>
