--- a/assistant/testview/templates/index.html
+++ b/assistant/testview/templates/index.html
@@ -34,23 +34,51 @@
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
+            <h2>Preferences</h2>
             <form>
-                <input type="text" value="Nickname" id="nameBox" name='usrname'>
-                <input type="text" value="Berlin" id="locBox" name='lcation'>
-                <input list="bundesliga" name="bndesliga" onchange="clubs(document.getElementsByName('bndesliga'))">
+                <label for="nme">Nickname:</label><br>
+                <input type="text" value="" id="usrname" name='usrname'>
+                <br>
+                <label for="lcation">Location:</label><br>
+                <input type="text" value="" id="lcation" name='lcation'>
+                <br>
+                <label for="bndesliga">League:</label><br>
+                <input list="bundesliga" id="bndesliga" name="bndesliga" onchange="clubs(document.getElementsByName('bndesliga'))">
                 <datalist id="bundesliga">
                     <option value="1.Bundesliga">
                     <option value="2.Bundesliga">
                 </datalist>
-                <input list="club" name="clb" onchange="resetList(document.getElementsByName('clb'))">
+                <br>
+                <label for="clb">Club:</label><br>
+                <input list="club" id="clb" name="clb" onchange="resetList(document.getElementsByName('clb'))">
                 <datalist id="club">
                 </datalist>
-                <input list="news" name="nws" onchange="resetList(document.getElementsByName('nws'))">
+                <br>
+                <label for="nws">News Portal:</label><br>
+                <input list="news" id="nws" name="nws" onchange="resetList(document.getElementsByName('nws'))">
                 <datalist id="news">
                     <option value="New York Times"></option>
                     <option value="The Economist"></option>
                     <option value="Deutsche Welle"></option>
                 </datalist>
+                <br>
+                <label for="hlth">Health Label:</label><br>
+                <input list="health" id="hlth" name="hlth" onchange="resetList(document.getElementsByName('hlth'))">
+                <datalist id="health">
+                    <option value="Peanut-Free"></option>
+                    <option value="Tree-Nut-Free"></option>
+                    <option value="Alcohol-Free"></option>
+                </datalist>
+                <br>
+                <label for="ctions">Cautions:</label><br>
+                <input list="cautions" id="ctions" name="ctions" onchange="resetList(document.getElementsByName('ctions'))">
+                <datalist id="cautions">
+                    <option value="Gluten"></option>
+                    <option value="Wheat"></option>
+                    <option value="Sulfites"></option>
+                </datalist>
+                <br>
+                <br>
                 <input type="button" value="Go!" id="submit"
                        onclick="putCookie(document.getElementsByTagName('form'));">
             </form>
