--- a/assistant/testview/templates/newindex.html
+++ b/assistant/testview/templates/newindex.html
@@ -25,11 +25,17 @@
                 
             </div>
             
-            <button id="start"></button>
+            <button onclick="topFunction()" id="start"></button>
 
 
         </main>
 
     </body>
+
+
+<script>
+</script>
+
+
 
 </html>
