--- a/assistant/testview/templates/index.html
+++ b/assistant/testview/templates/index.html
@@ -68,14 +68,15 @@
                     <option value="Peanut-Free"></option>
                     <option value="Tree-Nut-Free"></option>
                     <option value="Alcohol-Free"></option>
+                    <option value="Vegan"></option>
+                    <option value="Vegetarian"></option>
                 </datalist>
                 <br>
-                <label for="ctions">Cautions:</label><br>
-                <input list="cautions" id="ctions" name="ctions" onchange="resetList(document.getElementsByName('ctions'))">
-                <datalist id="cautions">
-                    <option value="Gluten"></option>
-                    <option value="Wheat"></option>
-                    <option value="Sulfites"></option>
+                <label for="diets">Diets:</label><br>
+                <input list="diets" id="dts" name="dts" onchange="resetList(document.getElementsByName('dts'))">
+                <datalist id="diets">
+                    <option value="Balanced"></option>
+                    <option value="Low Fat"></option>
                 </datalist>
                 <br>
                 <br>
