--- a/assistant/testview/templates/newindex.html
+++ b/assistant/testview/templates/newindex.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="{% static 'js/speech.js' %}"></script>
     <script src="{% static 'js/proactive.js' %}"></script>
+    <script src="{% static 'js/spotify.js' %}"></script>
 </head>
 
 <body onload="checkCookie()">
@@ -24,7 +25,10 @@
         </div>
 
     </div>
-
+    <br>
+    <br>
+    <br>
+    <br>
     <button id="start"></button>
 
     <div id="myNav" class="overlay">
