--- a/assistant/testview/templates/newindex.html
+++ b/assistant/testview/templates/newindex.html
@@ -66,18 +66,18 @@
                 <label for="hlth">Health Label:</label><br>
                 <input list="health" id="hlth" name="hlth" onchange="resetList(document.getElementsByName('hlth'))">
                 <datalist id="health">
-                    <option value="Peanut-Free"></option>
-                    <option value="Tree-Nut-Free"></option>
-                    <option value="Alcohol-Free"></option>
-                    <option value="Vegan"></option>
-                    <option value="Vegetarian"></option>
+                    <option value="peanut-free"></option>
+                    <option value="tree-nut-free"></option>
+                    <option value="alcohol-free"></option>
+                    <option value="vegan"></option>
+                    <option value="vegetarian"></option>
                 </datalist>
                 <br>
                 <label for="diets">Diets:</label><br>
                 <input list="diets" id="dts" name="dts" onchange="resetList(document.getElementsByName('dts'))">
                 <datalist id="diets">
-                    <option value="Balanced"></option>
-                    <option value="Low Fat"></option>
+                    <option value="balanced"></option>
+                    <option value="low fat"></option>
                 </datalist>
                 <br>
                 <br>
