--- a/assistant/testview/templates/newindex.html
+++ b/assistant/testview/templates/newindex.html
@@ -77,7 +77,7 @@
                 <input list="diets" id="dts" name="dts" onchange="resetList(document.getElementsByName('dts'))">
                 <datalist id="diets">
                     <option value="balanced"></option>
-                    <option value="low fat"></option>
+                    <option value="low-fat"></option>
                 </datalist>
                 <br>
                 <br>
