--- a/assistant/testview/templates/newindex.html
+++ b/assistant/testview/templates/newindex.html
@@ -42,6 +42,9 @@
                 <label for="lcation">Location:</label><br>
                 <input type="text" value="" id="lcation" name='lcation'>
                 <br>
+                <label for="nme">Trainstation:</label><br>
+                <input type="text" value="" id="sttion" name='sttion'>
+                <br>
                 <label for="bndesliga">League:</label><br>
                 <input list="bundesliga" id="bndesliga" name="bndesliga"
                        onchange="clubs(document.getElementsByName('bndesliga'))">
